RESOLVED FIXED314189
Native SSO authentication load hangs when opening a tab in the background
https://bugs.webkit.org/show_bug.cgi?id=314189
Summary Native SSO authentication load hangs when opening a tab in the background
Chris Dumez
Reported 2026-05-06 04:40:59 PDT
Native SSO authentication load hangs when opening a tab in the background.
Attachments
Chris Dumez
Comment 1 2026-05-06 04:41:06 PDT
Chris Dumez
Comment 2 2026-05-06 04:42:51 PDT
EWS
Comment 3 2026-05-06 16:04:15 PDT
Committed 312748@main (1007aa230ab9): <https://commits.webkit.org/312748@main> Reviewed commits have been landed. Closing PR #64362 and removing active labels.
EWS
Comment 4 2026-05-07 02:50:36 PDT
Committed 305413.847@safari-7624-branch (6aca0e5b75d9): <https://commits.webkit.org/305413.847@safari-7624-branch> Reviewed commits have been landed. Closing PR #5195 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.